[package]
name = "web-view"
version = "0.6.3"
authors = ["Boscop", "zxey <r.hozak@seznam.cz>", "Sam Green <sam.green81@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Boscop/web-view"
description = "Rust bindings for webview, a tiny cross-platform library to render web-based GUIs for desktop applications"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
exclude = ["examples/todo-ps/dist/**/*", "examples/elm-counter/index.html"]

[dependencies]
urlencoding = "1.0"
webview-sys = { path = "webview-sys", version = "0.5" }
boxfnonce = "0.1"
tinyfiledialogs = "3.3.9"

[features]
edge = ["webview-sys/edge"]

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web = "1.0"
actix-rt = "0.2"
rust-embed = "5.1.0"
mime_guess = "2.0.1"
futures = "0.1"
grep = "0.2.4"
walkdir = "2.3.1"
