[package]
name = "webview-examples"
edition = "2018"
version = "0.1.0"
authors = ["Boscop", "zxey <r.hozak@seznam.cz>", "Sam Green <sam.green81@gmail.com>"]
license = "MIT"
repository = "https://github.com/Boscop/web-view"
description = "Examples of using Web frontend technologies in desktop apps using the web-view crate"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
exclude = ["examples/todo-ps/dist/**/*", "examples/elm-counter/index.html"]
publish = false

[dependencies]
web-view = { path = "..", version = "0.7.3" }

[features]
edge = ["web-view/edge"]

[dev-dependencies]
tinyfiledialogs = "3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web = "4.0.0-beta.6"
rust-embed = "5.1.0"
mime_guess = "2.0.1"
grep = "0.2.4"
walkdir = "2.3.1"
