[package]
name = "webview-sys"
version = "0.3.3"
authors = ["Boscop", "zxey <r.hozak@seznam.cz>"]
license = "MIT"
repository = "https://github.com/Boscop/web-view"
description = "Rust native ffi bindings for webview"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
build = "build.rs"
links = "webview"
edition = "2018"

[lib]
name = "webview_sys"
path = "lib.rs"

[features]
edge = []

[dependencies]
bitflags = "1"
javascriptcore-rs-sys = "0.2"
gtk-sys = "0.9"
glib-sys = "0.9"
webkit2gtk-sys = "0.10"
libc = "0.2"

[build-dependencies]
cc = "1"
pkg-config = "0.3"