[package]
name = "webview-sys"
version = "0.4.0"
authors = ["Boscop", "zxey <r.hozak@seznam.cz>"]
license = "MIT"
repository = "https://github.com/Boscop/web-view"
description = "Rust native ffi bindings for webview"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
build = "build.rs"
links = "webview"

[lib]
name = "webview_sys"
path = "lib.rs"

[features]
edge = []

[dependencies]
bitflags = "1"

[build-dependencies]
cc = "1"
pkg-config = "0.3"